[gd_scene format=3 uid="uid://flndab53meod"]

[ext_resource type="Script" uid="uid://cagiceyg6vand" path="res://UI/pause_menu.gd" id="1_ltd3m"]
[ext_resource type="PackedScene" uid="uid://dlg0p3fm8doel" path="res://Scenes/opciones/opciones.tscn" id="2_jfm1e"]

[node name="PauseMenu" type="Control" unique_id=1241082772]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltd3m")

[node name="Dim" type="ColorRect" parent="." unique_id=2010970811]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.35686275)

[node name="PausePanel" type="Control" parent="." unique_id=1009277807]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelLabel" type="VBoxContainer" parent="PausePanel" unique_id=780154707]
layout_mode = 0
offset_left = 400.0
offset_top = 150.0
offset_right = 752.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="PausePanel/PanelLabel" unique_id=2107197651]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Pausa"
horizontal_alignment = 1

[node name="ButtonsBox" type="VBoxContainer" parent="PausePanel" unique_id=788635438]
layout_mode = 0
offset_left = 400.0
offset_top = 150.0
offset_right = 752.0
offset_bottom = 648.0
alignment = 1

[node name="ResumeButton" type="Button" parent="PausePanel/ButtonsBox" unique_id=1829902316]
layout_mode = 2
text = "Reanudar"

[node name="OptionsButton" type="Button" parent="PausePanel/ButtonsBox" unique_id=33440598]
layout_mode = 2
text = "Opciones
"

[node name="MenuButton" type="Button" parent="PausePanel/ButtonsBox" unique_id=391649445]
layout_mode = 2
text = "Men√∫"

[node name="OptionsPanel" type="Control" parent="." unique_id=970280834]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Opciones" parent="OptionsPanel" unique_id=1684543358 instance=ExtResource("2_jfm1e")]
layout_mode = 1

[connection signal="pressed" from="PausePanel/ButtonsBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausePanel/ButtonsBox/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PausePanel/ButtonsBox/MenuButton" to="." method="_on_menu_button_pressed"]
